--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -54,8 +54,8 @@ jobs:
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
-        aws-access-key-id: "AKIA2C6J3NQO7XYGYWEB"
-        aws-secret-access-key: "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"
+        aws-access-key-id: "AKIA4VPX7VMP3RYF7K5U"
+        aws-secret-access-key: "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"
         aws-region: "ap-southeast-1"
 
     - name: Login to Amazon ECR
