--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -35,7 +35,7 @@ env:
   ECS_CLUSTER: my-python-cluster                 # set this to your Amazon ECS cluster name
   ECS_TASK_DEFINITION: ./python-task-definition.json  # set this to the path to your Amazon ECS task definition
                                                # file, e.g. .aws/task-definition.json
-  CONTAINER_NAME: my-container-python           # set this to the name of the container in the
+  CONTAINER_NAME: myapp           # set this to the name of the container in the
                                                # containerDefinitions section of your task definition
 
 permissions:
