--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -54,8 +54,8 @@ jobs:
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
-        aws-access-key-id: "AKIA4VPX7VMP3RYF7K5U"
-        aws-secret-access-key: "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"
+        aws-access-key-id: "AKIA4VPX7VMPYLQ3FXQL"
+        aws-secret-access-key: "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"
         aws-region: "ap-southeast-1"
 
     - name: Login to Amazon ECR
